# FeedbackApp

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
back_end/: .dockerignore  Cargo.toml  Dockerfile  README.md
back_end/.sqlx/: query-05c480c57b05febdc71f2f8bd082d3922099bd254bf80b6bd4c1b7cdbe775f9c.json  query-0be95271776f2b07c0be49b0f3afcf7a7e02e5855b8d6f62914d6aa6a5728ce6.json  query-0c6c2e4c24232f864bfb04f5686ee18e7ef7202e1c4c300810f25b1ee0808841.json  query-21b0c8e41c33612e7a0e59fee06b2a2e0db9c50726b7b38c6a19722f8047179a.json  query-2bec388c6e21f7dfb3d788d0481c7869cecf2f0fec260af20e4151229190794b.json  query-2d9f2d0728983dfac09f6649da74aa5659072539a8f222b8ae202786ce958c37.json  query-41dd1f7b5ae361c482d65fc8043d5436d4419746104174e7c4fe6f1807cc3ee2.json  query-4b145113b7f3726bb05e9d718cfe76c11af4cee01db98dccc422e483402efa20.json  query-631047cfd5ed5fc8cd6e7301dcf701053722032c74049d125907fc6dc1004ce2.json  query-8a52527bdf5d3eb8a2f3e4e6462fdd850f83ee53e15e3dbe598241b14030d261.json  query-a4e9754e68741f8e2ed7c39fe736ef2564e4591dd4264cfd24f2c77ab4baa92c.json  query-b2f8d99354902d4e4b4e2b6861b071f7fb95e424ef7d99b1e6fc08a71d64a9a2.json  query-b3e7b35f589044524d9ac5be5dbd90ac2289e5fab959b22112e0c66d7e4a4713.json  query-b9fa87d32e92ed610a18663cae22ba628ab3e651a124ffd644d38655bd69600c.json  (+3 more)
back_end/migrations/: 20231228150042_client.sql  (+6 more)
front_end/: .dockerignore  Dockerfile  package-lock.json  package.json
migrations/: 20231228152054_contract.sql  20231228152100_location.sql  20231228152109_report.sql
nginx/: default.conf
src/: main.rs  models.rs
(+32 files in other folders)
